@@ -1,2 +1,3 @@
+-g
 
 These are passed to the C compiler.
