@@ -289,5 +289,9 @@
                cross compilation.
 20070615 code: updated to new cpj tool and new sysdeps.
 20070617 code: strange bug related to large signed constants on IA64.
-               -0xffffffff == 1, -0xffffffffL == -0xffffffff.
+               -0xffffffff == 1, -0xffffffffL == -0xffffffff. this does
+               not affect any library code, it simply required an
+               adjustment to the unit tests.
 20070617 code: fmt_char*() becomes signed char.
+20070619 code: incorrect memory copy on big endian hardware in
+               uint_convert() corrected.
